# Projeto-CG

./: README.md
Fase1/: CMakeLists.txt  main.cpp
Fase1/Gerador/: calculaVertices.cpp  calculaVertices.hpp  gerador.cpp
Fase1/Motor/: motor.cpp
Fase1/src/Gerador/: calculaVertices.cpp  calculaVertices.hpp  gerador.cpp
Fase1/src/Motor/: drawFunctions.cpp  drawFunctions.hpp  motor.cpp
Fase1/src/Utils/: utils.cpp  utils.hpp
Fase2/: CMakeLists.txt
Fase2/src/Gerador/: calculaVertices.cpp  gerador.cpp
Fase2/src/Motor/: motor.cpp
Fase2/src/Structs/: groupUtils.cpp  transUtils.cpp
Fase3/: CMakeLists.txt
Fase3/AsteroidScript/: main.py  novoSS.xml
Fase3/report/: CG_fase3.docx
Fase3/src/Gerador/: calculaVertices.cpp  gerador.cpp
Fase3/src/Motor/: drawFunctions.cpp  drawFunctions.hpp  motor.cpp
Fase3/src/Motor/MotorUtils/: catmullrom.cpp  drawFunctions.cpp
Fase3/src/Motor/MotorUtils/headers/: drawFunctions.hpp
Fase3/src/Structs/: groupUtils.cpp  groupUtils.hpp  transUtils.cpp  transUtils.hpp
Fase3/src/Utils/: matrixAux.cpp
Fase4/AsteroidScript/: main.py  novoSS.xml
Fase4/src/Motor/: motor.cpp
Fase4/src/Motor/MotorUtils/: modelsUtils.cpp
